--- a/src/css/slidingTabs.css
+++ b/src/css/slidingTabs.css
@@ -79,3 +79,35 @@ ion-slide:nth-child(2n) {
         transform: scale(2.5);
     }
 }
+
+
+.slidingTabs ul > li.ion-tab-icon-smile {
+    background-image: url('../../example/img/icon-smile1.png');
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-position: center center;
+    opacity: 0.3;
+}
+.slidingTabs ul > li.ion-tab-icon-smile.tab-active {
+    opacity: 1;
+}
+.slidingTabs ul > li.ion-tab-icon-apple {
+    background-image: url('../../example/img/icon-apple.png');
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-position: center center;
+    opacity: 0.3;
+}
+.slidingTabs ul > li.ion-tab-icon-apple.tab-active {
+    opacity: 1;
+}
+.slidingTabs ul > li.ion-tab-icon-alien {
+    background-image: url('../../example/img/icon-alien.png');
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-position: center center;
+    opacity: 0.3;
+}
+.slidingTabs ul > li.ion-tab-icon-alien.tab-active {
+    opacity: 1;
+}
